[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knowledge-base"
version = "1.0.0"
description = "RAG semantic search framework featuring hybrid dense-sparse search, auto-chunking, and LLM synthesis."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
